--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,16 @@
             <version>3.4.0</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.9.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.13.1</version>
+        </dependency>
     </dependencies>
 
     <build>
