--- a/pom.xml
+++ b/pom.xml
@@ -45,12 +45,6 @@
             <artifactId>jackson-core</artifactId>
             <version>2.13.2</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.fasterxml.jackson.core</groupId>-->
-<!--            <artifactId>jackson-databind</artifactId>-->
-<!--            <version>2.13.2</version>-->
-<!--            <scope>compile</scope>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -63,15 +57,14 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.coralogix.sdk.appenders</groupId>
-            <artifactId>log4j2-appender</artifactId>
-            <version>1.2.7</version>
-            <scope>compile</scope>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.17.1</version>
         </dependency>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.17.1</version>
         </dependency>
     </dependencies>
 
